src/objects/University_Class__c.object
<CustomObject>
    <fields>
        <fullName>Class_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Class Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMS_Class_ID__c</fullName>
        <label>LMS Class ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Registrants__c</fullName>
        <label>Number of Registrants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>University_Course_Request_ID__c</fullName>
        <label>University Course Request ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>University_Course_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>University Course Request</label>
        <referenceTo>University_Course_Request__c</referenceTo>
        <relationshipLabel>University Classes</relationshipLabel>
        <relationshipName>University_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>University Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UCS-{0000}</displayFormat>
        <label>University Class SFDC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>University Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>